Se terminan todas las peticiones

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,14 @@
 spring.application.name=s1torneos
 server.port=8080
-spring.datasource.url=jdbc:mysql://localhost:3306/s1torneos
+spring.datasource.url=jdbc:mysql://localhost:3306/s1t
 spring.datasource.username=root
 spring.datasource.password=123456
 
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
+
+app.services.convocatoria-url=http://localhost:8081/api/v1
+app.services.sancion-url=http://localhost:8082/api/v1
+
+server.error.include-message=always
