--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,8 @@ spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 
 app.services.convocatoria-url=http://localhost:8081/api/v1
+#app.services.convocatoria-url=http://192.168.0.150:8081/api/v1
+#192.168.0.150
 app.services.sancion-url=http://localhost:8082/api/v1
-
+app.services.estadistica-url=http://localhost:8082/api/v1/estadistica
 server.error.include-message=always
